studing partials, values for the view and loops

--- a/express-server/views/posts.ejs
+++ b/express-server/views/posts.ejs
@@ -7,12 +7,11 @@
 
   <%- include('partials/header.ejs') %>
 
-  <h1>Página inicial</h1>
-  <h2>Seja muito bem vindo!</h2>
+  <h1>Posts</h1>
+  <h2>Veja abaixo outros posts</h2>
 
   <%- include('partials/footer.ejs') %>
 
   <%- include('partials/foot.ejs') %>
-
 </body>
 </html>
