--- a/express-server/views/index.ejs
+++ b/express-server/views/index.ejs
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <%- include ('partials/head.ejs') %>
+  <%- include('partials/head.ejs') %>
 </head>
 <body>
-
   <%- include('partials/header.ejs') %>
-
+  <!-- miolo da página -->
   <h1>Página inicial</h1>
-  <h2>Seja muito bem vindo!</h2>
+  <h2>Seja bem vindo</h2>
 
   <%- include('partials/footer.ejs') %>
-
   <%- include('partials/foot.ejs') %>
-
 </body>
 </html>
