--- a/express-server/views/posts.ejs
+++ b/express-server/views/posts.ejs
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <%- include ('partials/head.ejs') %>
+  <%- include('partials/head.ejs') %>
 </head>
 <body>
-
   <%- include('partials/header.ejs') %>
-
+  <!-- miolo da página -->
   <h1>Posts</h1>
-  <h2>Veja abaixo outros posts</h2>
+  <h2>Veja abaixo alguns posts</h2>
 
   <%- include('partials/footer.ejs') %>
-
   <%- include('partials/foot.ejs') %>
 </body>
 </html>
