improving css code

--- a/express-server/views/index.ejs
+++ b/express-server/views/index.ejs
@@ -5,9 +5,18 @@
 </head>
 <body>
   <%- include('partials/header.ejs') %>
-  <!-- miolo da página -->
-  <h1>Página inicial</h1>
-  <h2>Seja bem vindo</h2>
+  
+  <main class="main">
+    <%- include('partials/navbar.ejs') %>
+    <!-- miolo da página -->
+    <div class="text">
+      <h1>Página inicial</h1>
+      <h2>Seja bem vindo</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus dolorum quis cum, praesentium labore quaerat voluptas distinctio, sit in quia ea blanditiis obcaecati nihil. Placeat, iusto. Pariatur aperiam reprehenderit accusantium.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, itaque. Itaque ipsa temporibus nam iste voluptatem quibusdam quaerat eos libero aut aspernatur laboriosam, ex nemo officiis unde fuga esse ratione!</p>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam eius ad incidunt odit nam quaerat minima quam ducimus assumenda, illo, ipsum saepe. Eligendi ad temporibus officia reprehenderit repudiandae corrupti officiis.</p>
+    </div>
+  </main>
 
   <%- include('partials/footer.ejs') %>
   <%- include('partials/foot.ejs') %>
