--- a/express-server/views/partials/header.ejs
+++ b/express-server/views/partials/header.ejs
@@ -1,10 +1,6 @@
-<header>
-  <ul>
-    <li>
-      <a href="/">Home</a>
-    </li>
-    <li>
-      <a href="/posts">Posts</a>
-    </li>
-  </ul>
+<header class="header">
+  <div class="container">
+    <h1>Digital Tech</h1>
+    <span>Your Company Slogan</span>
+  </div>
 </header>
