--- a/express-server/public/css/style.css
+++ b/express-server/public/css/style.css
@@ -1,3 +1,58 @@
-body { 
-  background-color: rgb(49, 174, 88);
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+
+body { 
+  background-color: white;
+}
+
+.header .container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: black;
+  width: 100%;
+  height: 35vh;
+  box-shadow: 5px 0px 5px black;
+  margin-bottom: 20px;
+}
+
+.header .container h1,
+.header .container span{
+  display: block;
+  color: white;
+}
+
+.main {
+  display: flex;
+}
+
+.main .nav .navbar {
+  list-style: none;
+}
+
+.main .nav .navbar li {
+  width: 150px;
+}
+
+.main .nav .navbar li a {
+  display: block;
+  text-align: center;
+  padding: 10px 20px;
+  margin: 10px 20px 0px 20px;
+  background-color: blueviolet;
+  text-decoration: none;
+  color: white;
+  border-top-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  font-size: 0.7em;
+}
+
+.footer {
+  margin-top: 100px;
+  text-align: center;
+}
+
