studing concepts about loop and condicionals in ejs

--- a/express-server/views/partials/navbar.ejs
+++ b/express-server/views/partials/navbar.ejs
@@ -13,6 +13,9 @@
       <a href="/services">SERVIÇOS</a>
     </li>
     <li>
+      <a href="/posts">POSTS</a>
+    </li>
+    <li>
       <a href="/contact">CONTATO</a>
     </li>
   </ul>
