--- a/express-server0.1/views/index.ejs
+++ b/express-server0.1/views/index.ejs
@@ -4,8 +4,11 @@
   <%- include('partials/head.ejs') %>
 </head>
 <body>
-<%- include('partials/header.ejs') %> 
-  <h1>Hello World</h1>
-<%- include('partials/footer.ejs') %>
+  <%- include('partials/header.ejs') %>
+  <!-- miolo da página -->
+    <h1>Hello World!</h1>
+  <!-- --------------- -->
+  <%- include('partials/footer.ejs') %>
+  <%- include('partials/script.ejs') %>
 </body>
 </html>
