--- a/express-server/views/cadastro-posts.ejs
+++ b/express-server/views/cadastro-posts.ejs
@@ -12,11 +12,9 @@
     <div class="text">
 
       <h1>Cadastro de Post</h1>
-
       <% if(cadastrado) { %>
-        Cadastro realizado com sucesso
-      <% } %>
-
+        <h3>Cadastrado com sucesso!</h3>
+      <% } %> 
       <form action="/salvar-post" method="post">
         <div>
           <label>Títulos</label>
