--- a/express-server0.1/views/index.ejs
+++ b/express-server0.1/views/index.ejs
@@ -5,10 +5,9 @@
 </head>
 <body>
   <%- include('partials/header.ejs') %>
-  <!-- miolo da página -->
-    <h1>Hello World!</h1>
-  <!-- --------------- -->
+  <h1>Hello World</h1>
+  
   <%- include('partials/footer.ejs') %>
-  <%- include('partials/script.ejs') %>
+  <%- include('partials/foot.ejs') %>
 </body>
 </html>
